polish: Witch's House (#2340)
* refactor: modernize

* test: opt into sidebar test

* nit: mark combat gear as required

When someone does this quest, they _will_ need some sort of combat gear

* nit: quest start text

* phrasing for key fetch step

* fix: sidebar step

* polish

Adds an optional step (the user can opt out by checking the checkpoint section) to read the diary, ensuring the middle
door is never locked if the witch throws the player out

Makes the texts a bit more fool proof in case jagex changes the locked/unlocked state of the shed door